<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/rectangle_bg"
        android:text="About FaceGlasses"
        android:textColor="@color/darkPurple"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:layout_marginBottom="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginBottom="6dp"
        card_view:cardCornerRadius="25dp"
        card_view:cardElevation="6dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_card2">

            <ImageView
                android:id="@+id/imagecard1"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/book" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/imagecard1"
                android:gravity="center"
                android:orientation="vertical">
            <TextView
                android:id="@+id/titlecard1"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="INFORMATIVE"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="textStart"/>

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/intro1"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        card_view:cardCornerRadius="25dp"
        card_view:cardElevation="6dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_card1">

            <ImageView
                android:id="@+id/imagecard2"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/selfie" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/imagecard2"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titlecard2"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="VIRTUAL TRY-ON"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textAlignment="textStart"/>

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/intro2"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginTop="6dp"
        card_view:cardCornerRadius="25dp"
        card_view:cardElevation="6dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_card3">

            <ImageView
                android:id="@+id/imagecard3"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/no_connection" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/imagecard3"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titlecard3"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="OFFLINE"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textAlignment="textStart"/>

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/intro3"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>